--- a/dsl_intp/package.xml
+++ b/dsl_intp/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-    <name>intp</name>
+    <name>dsl_intp</name>
     <version>1.0.0</version>
     <description>The robot interpreter API package</description>
 
@@ -14,7 +14,7 @@
     <build_depend>std_msgs</build_depend>
     <build_depend>roscpp</build_depend>
     <build_depend>pluginlib</build_depend>
-    <build_depend>Logger</build_depend>
+    <build_depend>simple_motion_logger</build_depend>
     <build_depend>kdl_common</build_depend>
     <build_depend>kinematics_map</build_depend>
     <build_depend>trajectory</build_depend>
@@ -24,7 +24,7 @@
     <run_depend>roscpp</run_depend>
     <run_depend>std_msgs</run_depend>
     <run_depend>pluginlib</run_depend>
-    <run_depend>Logger</run_depend>
+    <run_depend>simple_motion_logger</run_depend>
     <run_depend>kdl_common</run_depend>
     <run_depend>kinematics_map</run_depend>
     <run_depend>trajectory</run_depend>
