--- a/kinematics_map/package.xml
+++ b/kinematics_map/package.xml
@@ -10,12 +10,12 @@
 
     <buildtool_depend>catkin</buildtool_depend>
     <build_depend>roscpp</build_depend>
-    <build_depend>Logger</build_depend>
+    <build_depend>simple_motion_logger</build_depend>
     <build_depend>kdl_common</build_depend>
     <build_depend>pluginlib</build_depend>
     
     <run_depend>roscpp</run_depend>
-    <run_depend>Logger</run_depend>
+    <run_depend>simple_motion_logger</run_depend>
     <run_depend>kdl_common</run_depend>
     <run_depend>pluginlib</run_depend>
     <export>
