--- a/quattro/package.xml
+++ b/quattro/package.xml
@@ -12,7 +12,7 @@
     <build_depend>sensor_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>roscpp</build_depend>
-    <build_depend>Logger</build_depend>
+    <build_depend>simple_motion_logger</build_depend>
     <build_depend>kdl_common</build_depend>
     <build_depend>kinematics_map</build_depend>
     <build_depend>trajectory</build_depend>
@@ -20,7 +20,7 @@
     <run_depend>sensor_msgs</run_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>std_msg</run_depend>
-    <run_depend>Logger</run_depend>
+    <run_depend>simple_motion_logger</run_depend>
     <run_depend>kinematics_map</run_depend>
     <run_depend>kdl_common</run_depend>
     <run_depend>trajectory</run_depend>
